--- a/PetriNetXamarin/Resources/layout/DMatrix.axml
+++ b/PetriNetXamarin/Resources/layout/DMatrix.axml
@@ -1,12 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <GridView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/gridview"
-          android:layout_width="fill_parent"
-          android:layout_height="fill_parent"
-          android:columnWidth="90dp"
-          android:verticalSpacing="5dp"
-          android:horizontalSpacing="5dp"
-          android:stretchMode="columnWidth"
-          android:gravity="center"
-          android:numColumns="6" />
+    android:id="@+id/gridviewDmatrixes"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:columnWidth="90dp"
+    android:verticalSpacing="5dp"
+    android:horizontalSpacing="5dp"
+    android:stretchMode="columnWidth"
+    android:gravity="center"
+    android:numColumns="6"
+    android:padding="2dp" />
