--- a/PetriNetXamarin/Resources/layout/GridItem.axml
+++ b/PetriNetXamarin/Resources/layout/GridItem.axml
@@ -1,20 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-
+<?xml version="1.0" encoding="utf-8"?>
 <EditText xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/EditTextTile"
-          android:inputType="number"
-          android:numeric="integer"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:gravity="center"
-          android:text="tile" />
-
-
-<!--<EditText
-        android:id="@+id/EditTextTile"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:padding="5,5,5,5"
-        android:text="4a" />
-</LinearLayout>-->
+    android:id="@+id/EditTextTile"
+    android:inputType="number"
+    android:numeric="integer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:background="@drawable/border"
+    android:textColor="@android:color/black"
+    android:text="tile" />
